--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">Home</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://github.com/filmdist/filmdist.github.io">Code </a>
+                    <a class="nav-link" href="https://github.com/filmdistributors/filmdistributors.github.io">Code </a>
                 </li>
             </ul>
 
